# Production-Agent

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
backend/: main.py  requirements.txt
backend/app/agents/: crew.py
backend/app/models/: schemas.py
include/: Line.h  Location.h  Role.h  Scene.h
src/: Line.cpp  Location.cpp  Role.cpp  Scene.cpp  main.cpp
